force-app/main/default/objects/DSALES_Reembolso__c/DSALES_Reembolso__c.object-meta.xml
<CustomObject>
    <description>Objeto para registrar los reembolso que nos comparte Coppel por cancelaciones o devoluciones.</description>
    <label>Reembolso</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Número de Reembolso</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reembolsos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>