force-app/main/default/objects/DSALES_Reembolso__c/fields/Cantidad__c.field-meta.xml
<CustomField>
    <fullName>Cantidad__c</fullName>
    <description>Importe total de este reembolso.</description>
    <label>Cantidad</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>