force-app/main/default/objects/DSALES_Reembolso__c/fields/DSALES_Cliente__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reembolsos</relationshipLabel>
    <relationshipName>Reembolsos</relationshipName>
    <type>Lookup</type>
</CustomField>