force-app/main/default/objects/DSALES_Reembolso__c/fields/DSALES_Comentarios__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Comentarios__c</fullName>
    <description>Campo para agregar comentarios para proporcionar detalles adicionales sobre su reembolso</description>
    <label>Comentarios</label>
    <type>TextArea</type>
</CustomField>