force-app/main/default/objects/DSALES_Reembolso__c/fields/DSALES_FechaReembolso__c.field-meta.xml
<CustomField>
    <fullName>DSALES_FechaReembolso__c</fullName>
    <description>La fecha en que se creó este reembolso.</description>
    <label>Fecha de reembolso</label>
    <type>Date</type>
</CustomField>