force-app/main/default/objects/DSALES_Reembolso__c/fields/DSALES_InformaciondePago__c.field-meta.xml
<CustomField>
    <fullName>DSALES_InformaciondePago__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para relacionar el reembolso a la información de pago</description>
    <label>Información de pago</label>
    <referenceTo>DSALES_InformacionDePago__c</referenceTo>
    <relationshipLabel>Reembolsos</relationshipLabel>
    <relationshipName>Reembolsos</relationshipName>
    <type>Lookup</type>
</CustomField>