force-app/main/default/objects/DSALES_Reembolso__c/fields/DSALES_MetododePpago__c.field-meta.xml
<CustomField>
    <fullName>DSALES_MetododePpago__c</fullName>
    <description>El método de pago utilizado para crear el pago que se reembolsa.</description>
    <label>Método de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Efectivo</fullName>
            </value>
            <value>
                <fullName>Tarjeta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>