force-app/main/default/objects/DSALES_Reembolso__c/fields/DSALES_NumeroCancelacion__c.field-meta.xml
<CustomField>
    <fullName>DSALES_NumeroCancelacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo relación con el objeto cancelación</description>
    <label>Número de cancelación</label>
    <referenceTo>DSALES_Cancelacion__c</referenceTo>
    <relationshipLabel>Reembolsos</relationshipLabel>
    <relationshipName>Reembolsos</relationshipName>
    <type>Lookup</type>
</CustomField>