force-app/main/default/objects/DSALES_Reembolso__c/fields/DSALES_NumerodeReferencia__c.field-meta.xml
<CustomField>
    <fullName>DSALES_NumerodeReferencia__c</fullName>
    <description>ID único para la transacción de reembolso</description>
    <label>Número de referencia</label>
    <length>35</length>
    <type>Text</type>
</CustomField>