force-app/main/default/objects/DSALES_Reembolso__c/fields/NombredelProducto__c.field-meta.xml
<CustomField>
    <fullName>NombredelProducto__c</fullName>
    <label>Nombre del producto</label>
    <length>30</length>
    <type>Text</type>
</CustomField>