force-app/main/default/objects/DSALES_Reembolso__c/recordTypes/DSALES_RegistroReembolsoSM.recordType-meta.xml
<RecordType>
    <fullName>DSALES_RegistroReembolsoSM</fullName>
    <active>true</active>
    <description>Tipo de registro para el proceso de SM</description>
    <label>Registro de reembolso SM</label>
</RecordType>